# StudyTimerPro

./: .gitignore  Authenticator.py  StudyTimer - Copy.py  StudyTimer.py  StudyTimer.spec  StudyTimerProLauncher.py  StudyTimerProLauncher.spec  StudyTimer_backup_before_patch.py  ai_chat_dialog.py  ai_gpt_planner.py  ai_integration.py  api_client.py  apply_and_upload_patch.bat  auto_updater.py  chat_app.py  config_paths.py  dotenv.py  encrypted_gspread_connection.py  firebase_groups_tab - Copy.py  firebase_groups_tab.py  fix.diff  flet.yaml  flutter_bootstrap.dart  index.js  main_patch.dart  payment_status.json  pubspec.yaml  purchase_dialog.py  pyproject.toml  requirements.txt  secrets_util.py  secrets_util_chatapp.py  study_material.py  token_manager.py  token_tracker.py  very very very importand.txt
.github/workflows/: build.yml  get-sha1.yml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/: fcm_handler.dart  main_dart_patch.txt
android/app/src/main/kotlin/com/flet/chat_app/: Application.kt
launcher/: StudyTimerPro.py  StudyTimerPro.spec  StudyTimerProLauncher.spec
