[project]
name = "chat-app"
version = "1.0.0"
description = "Firebase-based Chat Application"
requires-python = ">=3.10"
dependencies = [
    "flet>=0.28.3",
    "flet-onesignal>=0.3.3",
    "requests",
    "gspread>=6.0.0",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "google-cloud-secret-manager>=2.16.0",
    "cryptography>=42.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# =========================
# Flet app configuration
# =========================
[tool.flet]

[tool.flet.app]
name = "Chat App"
description = "Firebase-based Chat Application"
version = "1.0.0"
module = "chat_app"          # chat_app.py is your entry module

# =========================
# Android-specific settings
# =========================
[tool.flet.android]
package = "com.flet.chat_app"
min_sdk_version = 21
target_sdk_version = 34

# ⚠️ Keep ONLY the permissions really needed for FCM notifications
[tool.flet.android.permission]
"android.permission.INTERNET" = true
"android.permission.ACCESS_NETWORK_STATE" = true
"android.permission.POST_NOTIFICATIONS" = true
"android.permission.VIBRATE" = true

# If you *really* need boot handling later you can add:
# "android.permission.RECEIVE_BOOT_COMPLETED" = true
# but leave it out for now to reduce Play Protect suspicion.

# =========================
# Extra Flutter packages
# (Firebase, notifications, etc.)
# =========================
[tool.flet.flutter.dependencies]
firebase_core = "2.24.0"
firebase_messaging = "14.7.0"
flutter_local_notifications = "16.3.0"
shared_preferences = "2.2.2"
permission_handler = "11.0.1"
