[project]
name = "chat-app"
version = "1.0.0"
description = "Firebase-based Chat Application"
requires-python = ">=3.10"
dependencies = [
    "flet>=0.28.3",
    "flet-onesignal>=0.3.3",
    "requests",
    "gspread>=6.0.0",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "google-cloud-secret-manager>=2.16.0",
    "cryptography>=42.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# =========================
# Flet app configuration
# =========================
[tool.flet]
org = "com.flet"
product = "ST Promoter Hub"

[tool.flet.app]
name = "ST Promoter Hub"
description = "Firebase-based Chat Application"
version = "1.0.0"
module = "chat_app"

# =========================
# Android-specific settings
# =========================
[tool.flet.android]
package = "com.flet.chat_app"
min_sdk_version = 23
target_sdk_version = 34
compile_sdk_version = 34

# ⚠️ Android 13+ requires POST_NOTIFICATIONS permission
[tool.flet.android.permission]
"android.permission.INTERNET" = true
"android.permission.ACCESS_NETWORK_STATE" = true
"android.permission.POST_NOTIFICATIONS" = true
"android.permission.WAKE_LOCK" = true
"android.permission.VIBRATE" = true

# =========================
# Flutter dependencies
# =========================
[tool.flet.flutter.dependencies]
flet_onesignal = "0.3.3"
